test/TestPhases/parser/invalid/importwithblanks.blc
import mymod "a director/my mod"

module

activity main()
end

